--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
+    "style-resources-loader": "^1.3.3",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
